@@ -1,3 +1,10 @@
+2003-02-25  Vino Crescini  <jcrescin@cit.uws.edu.au>
+
+	* kb/atom.cpp :
+	* kb/atom.h :
+
+	  - Added verify function to ensure integrity.
+
 2003-02-24  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
 	* kb/Makefile.in :
